--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hallo world</h1>
+    <p>350<sup>2</sup>+350<sup>2</sup>=</p>
 </body>
 </html>
