--- a/папка 3/папка 3.2/test3.html
+++ b/папка 3/папка 3.2/test3.html
@@ -7,6 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    <p>350<sup>2</sup>+350<sup>2</sup>=245000</p>
+    <h3>tretie</h3>
+    <a href="../../папка 1/папка1.1/index.html">index</a>
+    <a href="../../папка 2/test.html">test</a>
+    <a href="../папка 3.1/папка 3.1.1/test2.html">test2</a>
 </body>
 </html>
